# clickcal

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
clickcal/: __init__.py  __main__.py  app.py  cache.py  clickup.py  config.py  ical.py
tests/: test_app.py  test_cache.py  test_calendar.py  test_clickup.py
