[project]
name = "clickcal"
version = "0.1.0"
description = "Serve a ClickUp space's tasks as an iCal feed over HTTP."
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "httpx>=0.28.1",
    "icalendar>=7.1.3",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
clickcal = "clickcal.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clickcal"]
